# kibble

./: .gitignore  Cargo.toml  README.md  bench_after.mjs  bench_before.mjs  bench_full.mjs  decode.js  index.d.ts  index.js  lib.js  native.js  package-lock.json  package.json
.github/workflows/: ci.yml
__test__/: kibble.test.mjs
benchmarks/: bench_1m_rows.mjs  bench_vs_tedious.mjs  bench_wide_columns.mjs
src/: connection.rs  lib.rs  types.rs
